test/corpus/sites.txt
==================================
Single Site Block with one address
==================================

example.com

root * /var/www

---

(source_file
	(single_site
		(site_address)
		(directive
			(directive_name)
			(matcher)
			(argument))))

=========================================
Single Site Block with multiple addresses
=========================================

http://example.com:8080, https://fake.org:8443, fake.co.uk, {$ENV_SITE}, :{$PORT}, {$DOMAIN}:443

---

(source_file
	(single_site
		(site_address)
		(site_address)
		(site_address)
		(site_address)
		(site_address)
		(site_address)))

==============================================
Site Block with multiline comma-separated addresses
==============================================

mysite.com,
myothersite.com {
	respond "ok"
}

example.org {
	handle /xyz {
		file_server
	}
}

---

(source_file
	(site_block
		name: (site_address)
		name: (site_address)
		(block
			body: (directive
				name: (directive_name)
				(interpreted_string_literal))))
	(site_block
		name: (site_address)
		(block
			body: (directive
				name: (directive_name)
				(matcher
					(path_matcher))
				(block
					body: (directive
						name: (directive_name)))))))

=====================================
Single Site Block with Global Options
=====================================

{
	hello
}

example.com

root * /var/www

---

(source_file
	(global_options
		(directive
			(directive_name)))
	(single_site
		(site_address)
		(directive
			(directive_name)
			(matcher)
			(argument))))

=================
Single Site Block
=================

example.com {
	respond "Hello, world!"
}

---

(source_file
	(site_block
		(site_address)
		(block
			(directive
				(directive_name)
				(interpreted_string_literal)))))

====================
Multiple Site Blocks
====================

example.com {
	respond "Hello, world!"
}

foobar.com {
	respond "Hello, world!"
}

---

(source_file
	(site_block
		(site_address)
		(block
			(directive
				(directive_name)
				(interpreted_string_literal))))
	(site_block
		(site_address)
		(block
			(directive
				(directive_name)
				(interpreted_string_literal)))))
